# aerial_image_stitching_pkg

./: .gitignore  CMakeLists.txt  README  package.xml
launch/: cap_video_stream.launch  image_pub.launch  multi_cap.launch  real_time_stitching.launch  real_time_stitching_multi.launch  sim_real_time_stitching.launch  sync_video.launch
src/: airsim_cap.py  cap_multi.py  cap_video_stream.py  geotag.py  image_cap.py  image_pub.py  incremental_smt.py  multi_drone.py  overlap_plot.py  plot.py  smt.py  super_stitch.py  video_capture.py  video_capture_multi.py
